# wright-move

./: .gitignore  CLAUDE.md  LICENSE  README.md  get_details.py  main.py  manage.py  netlify.toml  package-lock.json
.claude/rules/: python-docstrings.md  python-testing.md  typescript.md
.claude/skills/add-agency-scraper/: SKILL.md
.github/workflows/: scrape.yml
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  Header.tsx  ListingCard.tsx  ShareButton.tsx  sort.ts  styles.css  types.ts  useListings.ts  vite-env.d.ts
frontend/src/assets/: loading-dog.lottie
frontend/src/lib/: sort.ts  (+1 more)
netlify/functions/: _trigger.ts  refresh.ts  scheduled-scrape.ts  tsconfig.json
scraper/: README.md  pyproject.toml
scraper/src/scraper/: __main__.py  http.py  main.py  models.py  settings.py  store.py
scraper/src/scraper/agencies/: __init__.py  belvoir.py  fss.py  lentin_smith.py  linley_and_simpson.py  martin_and_co.py  verity_frearson.py  whitaker_cadre.py  william_h_brown.py
scraper/tests/fixtures/: belvoir.html  fss.html  lentin_smith.html  linley_and_simpson.json  martin_and_co.html  verity_frearson.html  whitaker_cadre.html  william_h_brown.html
scraper/tests/unit/agencies/: test_belvoir.py  test_fss.py  test_lentin_smith.py  test_linley_and_simpson.py  test_martin_and_co.py  test_verity_frearson.py  test_whitaker_cadre.py  test_william_h_brown.py
supabase/migrations/: 20260517155215_remote_schema.sql  20260518212712_rename_scraped_at_add_first_seen.sql
wrightmove/: asgi.py  settings.py  urls.py  wsgi.py
(+6 files in other folders)
